--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "sqlite3": "^5.1.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^12.1.5",
     "babel-jest": "^27.1.0",
-    "jest": "^27.1.0",
+    "jest": "^27.5.1",
     "process": "^0.11.10"
   }
 }
