--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "cors": "^2.8.5",
-    "dotenv": "16.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "1.10.0",
     "nodemon": "^3.1.0",
     "parcel": "^2.8.3",
