--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@mui/base": "^5.0.0-beta.68",
     "cors": "^2.8.5",
-    "dotenv": "16.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "1.10.0",
     "nodemon": "^3.1.0",
     "parcel": "^2.8.3",
@@ -24,9 +26,10 @@
     "sqlite3": "^5.1.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^12.0.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^12.1.5",
     "babel-jest": "^27.1.0",
-    "jest": "^27.1.0",
+    "jest": "^27.5.1",
     "process": "^0.11.10"
   }
 }
